# esp32

./: .gitignore
01_led/components/BSP/: CMakeLists.txt
01_led/components/BSP/LED/: led.c  led.h
01_led/components/BSP/RGB_LED/: rgb_led.c
01_led/main/: main.c
02_key/components/BSP/: CMakeLists.txt
02_key/components/BSP/KEY/: key.c  key.h
02_key/components/BSP/LED/: led.c  led.h
02_key/main/: main.c
03_exit/components/BSP/: CMakeLists.txt
03_exit/components/BSP/EXIT/: exit.c  exit.h
03_exit/main/: main.c
04_uart/components/BSP/: CMakeLists.txt
04_uart/components/BSP/UART/: uart.c  uart.h
04_uart/main/: main.c
it_is_my_time/: PROJECT_GUIDE.md  PROJECT_SUMMARY.md
it_is_my_time/components/BSP/: CMakeLists.txt
it_is_my_time/components/BSP/LED/: led.h
it_is_my_time/components/BSP/RGB_LED/: rgb_led.h
it_is_my_time/components/audio_player/: CMakeLists.txt  audio_player.c  idf_component.yml
it_is_my_time/components/audio_player/include/: audio_player.h
it_is_my_time/components/display/: CMakeLists.txt  display.c
it_is_my_time/components/display/include/: display.h
it_is_my_time/main/: CMakeLists.txt  idf_component.yml  main.c
test/: CMakeLists.txt
test/main/: test.c
